[package]
name = "trezoa-gossip"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/trezoa-gossip"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
bench = false

[[bin]]
name = "trezoa-gossip"
path = "src/main.rs"
bench = false

[features]
frozen-abi = [
    "dep:trezoa-frozen-abi",
    "dep:trezoa-frozen-abi-macro",
    "trezoa-bloom/frozen-abi",
    "trezoa-ledger/frozen-abi",
    "trezoa-perf/frozen-abi",
    "trezoa-runtime/frozen-abi",
    "trezoa-short-vec/frozen-abi",
    "trezoa-version/frozen-abi",
    "trezoa-vote/frozen-abi",
    "trezoa-vote-program/frozen-abi",
]
trezoa-unstable-api = ["trezoa-low-pass-filter/trezoa-unstable-api"]

[dependencies]
trezoa-feature-set = { workspace = true }
trezoa-logger = { workspace = true }
trezoa-low-pass-filter = { workspace = true, features = ["trezoa-unstable-api"] }
arrayvec = { workspace = true }
assert_matches = { workspace = true }
bincode = { workspace = true }
bv = { workspace = true, features = ["serde"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
siphasher = { workspace = true }
trezoa-account = { workspace = true }
trezoa-bloom = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-client = { workspace = true }
trezoa-clock = "=3.0.0"
trezoa-cluster-type = "=3.0.0"
trezoa-connection-cache = { workspace = true }
trezoa-entry = { workspace = true }
trezoa-epoch-schedule = "=3.0.0"
trezoa-frozen-abi = { version = "=3.0.1", optional = true, features = [
    "frozen-abi",
] }
trezoa-frozen-abi-macro = { version = "=3.0.1", optional = true, features = [
    "frozen-abi",
] }
trezoa-hash = "=3.0.0"
trezoa-keypair = "=3.0.1"
trezoa-ledger = { workspace = true, features = ["trezoa-unstable-api"] }
trezoa-measure = { workspace = true }
trezoa-metrics = { workspace = true }
trezoa-native-token = "=3.0.0"
trezoa-net-utils = { workspace = true, features = ["trezoa-unstable-api"] }
trezoa-packet = "=3.0.0"
trezoa-perf = { workspace = true }
trezoa-pubkey = { version = "=3.0.0", features = ["rand"] }
trezoa-quic-definitions = "=3.0.0"
trezoa-rayon-threadlimit = { workspace = true }
trezoa-rpc-client = { workspace = true }
trezoa-runtime = { workspace = true }
trezoa-sanitize = "=3.0.1"
trezoa-serde-varint = "=3.0.0"
trezoa-sha256-hasher = "=3.0.0"
trezoa-short-vec = "=3.0.0"
trezoa-signature = { version = "=3.1.0", default-features = false }
trezoa-signer = "=3.0.0"
trezoa-streamer = { workspace = true }
trezoa-time-utils = "=3.0.0"
trezoa-tpu-client = { workspace = true }
trezoa-transaction = "=3.0.1"
trezoa-version = { workspace = true }
trezoa-vote = { workspace = true }
trezoa-vote-program = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
criterion = { workspace = true }
num_cpus = { workspace = true }
rand0-7 = { workspace = true }
rand_chacha0-2 = { workspace = true }
serial_test = { workspace = true }
trezoa-net-utils = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-perf = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-signature = { version = "=3.1.0", features = ["rand"] }
trezoa-system-transaction = { workspace = true }
trezoa-vote-interface = { workspace = true }
static_assertions = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "crds"
harness = false

[[bench]]
name = "crds_gossip_pull"
harness = false

[[bench]]
name = "crds_shards"
harness = false

[[bench]]
name = "weighted_shuffle"
harness = false

[lints]
workspace = true
