[package]
name = "trezoa-net-shaper"
description = "The trezoa cluster network shaping tool"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "trezoa-net-shaper"
path = "src/main.rs"

[dependencies]
trezoa-logger = { workspace = true }
clap = { version = "3.1.5", features = ["cargo"] }
rand = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
