[package]
name = "trezoa-net-utils"
description = "Trezoa Network Utilities"
documentation = "https://docs.rs/trezoa-net-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "trezoa_net_utils"

[features]
trezoa-unstable-api = []
default = []
dev-context-only-utils = ["dep:pcap-file", "dep:hxdmp"]

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
hxdmp = { version = "0.2.1", optional = true }
itertools = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["socket"] }
pcap-file = { version = "2.0.0", optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
socket2 = { workspace = true }
trezoa-serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }

[dev-dependencies]
trezoa-logger = { workspace = true }

[lints]
workspace = true
