[package]
name = "trezoa-poseidon"
description = "Trezoa Poseidon hashing"
documentation = "https://docs.rs/trezoa-poseidon"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = { workspace = true }

[target.'cfg(not(target_os = "trezoa"))'.dependencies]
ark-bn254 = { workspace = true }
light-poseidon = { workspace = true }

[target.'cfg(target_os = "trezoa")'.dependencies]
trezoa-define-syscall = { workspace = true }

[lints]
workspace = true
