[package]
name = "trezoa-rayon-threadlimit"
description = "trezoa-rayon-threadlimit"
documentation = "https://docs.rs/trezoa-rayon-threadlimit"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
num_cpus = { workspace = true }
