[package]
name = "trezoa-tokens"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/trezoa-tokens"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["default", "serde"] }
clap = "2.33.0"
console = { workspace = true }
csv = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
indexmap = { workspace = true }
indicatif = { workspace = true }
pickledb = { workspace = true, features = ["yaml"] }
serde = { workspace = true }
serde_derive = { workspace = true }
trezoa-account-decoder = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-cli-config = { workspace = true }
trezoa-cli-output = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-commitment-config = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-message = { workspace = true }
trezoa-native-token = { workspace = true }
trezoa-program-error = { workspace = true }
trezoa-program-pack = { workspace = true }
trezoa-pubkey = { workspace = true, features = ["rand"] }
trezoa-remote-wallet = { workspace = true, features = ["default"] }
trezoa-rpc-client = { workspace = true, features = ["default"] }
trezoa-rpc-client-api = { workspace = true }
trezoa-signature = { workspace = true }
trezoa-signer = { workspace = true }
trezoa-stake-interface = { workspace = true }
trezoa-system-interface = { workspace = true }
trezoa-transaction = { workspace = true }
trezoa-transaction-status = { workspace = true }
trezoa-version = { workspace = true }
spl-associated-token-account-interface = { version = "=2.0.0" }
tpl-token-interface = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
trezoa-logger = { workspace = true }
assert_matches = { workspace = true }
bincode = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-test-validator = { workspace = true }
trezoa-transaction-error = { workspace = true }
