[package]
name = "trezoa-tpu-client-next"
description = "Client code to send transaction to TPU."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
trezoa-unstable-api = ["dep:qualifier_attr"]
default = ["log"]
log = ["dep:log"]
metrics = ["dep:trezoa-metrics"]
tracing = ["dep:tracing"]

[dependencies]
async-trait = { workspace = true }
log = { workspace = true, optional = true }
lru = { workspace = true }
qualifier_attr = { workspace = true, optional = true }
quinn = { workspace = true }
rustls = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-connection-cache = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-metrics = { workspace = true, optional = true }
trezoa-quic-definitions = { workspace = true }
trezoa-rpc-client = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-time-utils = { workspace = true }
trezoa-tls-utils = { workspace = true }
trezoa-tpu-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
crossbeam-channel = { workspace = true }
futures = { workspace = true }
trezoa-cli-config = { workspace = true }
trezoa-commitment-config = { workspace = true }
trezoa-net-utils = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-signer = { workspace = true }
trezoa-streamer = { workspace = true, features = ["dev-context-only-utils"] }
