[package]
name = "trezoa-turbine"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/trezoa-turbine"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
trezoa-unstable-api = []

[dependencies]
trezoa-feature-set = { workspace = true }
trezoa-xdp = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy-lru = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rustls = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-cluster-type = { workspace = true }
trezoa-entry = { workspace = true }
trezoa-gossip = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-ledger = { workspace = true, features = ["trezoa-unstable-api"] }
trezoa-measure = { workspace = true }
trezoa-metrics = { workspace = true }
trezoa-native-token = { workspace = true }
trezoa-net-utils = { workspace = true }
trezoa-nohash-hasher = { workspace = true }
trezoa-perf = { workspace = true }
trezoa-poh = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-quic-client = { workspace = true }
trezoa-rayon-threadlimit = { workspace = true }
trezoa-rpc = { workspace = true }
trezoa-rpc-client-api = { workspace = true }
trezoa-runtime = { workspace = true }
trezoa-sha256-hasher = { workspace = true }
trezoa-signature = { workspace = true }
trezoa-signer = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-system-transaction = { workspace = true }
trezoa-time-utils = { workspace = true }
trezoa-tls-utils = { workspace = true }
trezoa-transaction-error = { workspace = true }
trezoa-votor = { workspace = true }
trezoa-votor-messages = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
caps = { workspace = true }

[dev-dependencies]
trezoa-logger = { workspace = true }
assert_matches = { workspace = true }
bencher = { workspace = true }
bs58 = { workspace = true }
conditional-mod = { workspace = true }
trezoa-genesis-config = { workspace = true }
trezoa-ledger = { workspace = true, features = ["trezoa-unstable-api","dev-context-only-utils"] }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-signature = { workspace = true, features = ["rand"] }
trezoa-transaction = { workspace = true }
trezoa-turbine = { path = ".", features = ["trezoa-unstable-api"] }
trezoa-votor-messages = { workspace = true, features = ["dev-context-only-utils"] }
test-case = { workspace = true }

[[bench]]
name = "cluster_info"
harness = false

[[bench]]
name = "cluster_nodes"
harness = false
