[package]
name = "trezoa-unified-scheduler-logic"
description = "The Trezoa unified scheduler logic"
documentation = "https://docs.rs/trezoa-unified-scheduler-logic"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
assert_matches = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-runtime-transaction = { workspace = true }
trezoa-transaction = { workspace = true }
static_assertions = { workspace = true }
unwrap_none = { workspace = true }

[dev-dependencies]
trezoa-instruction = { workspace = true }
trezoa-message = { workspace = true }
trezoa-runtime-transaction = { workspace = true, features = [
    "dev-context-only-utils",
] }
