[package]
name = "trezoa-bls12-381"
description = "Trezoa Bls12-381"
documentation = "https://docs.rs/trezoa-bls12-381"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
trezoa-curve-traits = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "trezoa"))'.dependencies]
blst = { workspace = true }

[target.'cfg(target_os = "trezoa")'.dependencies]
trezoa-define-syscall = { workspace = true }

[lints]
workspace = true
