[package]
name = "trezoa-curve-traits"
description = "Trezoa Curve Traits"
documentation = "https://docs.rs/trezoa-curve-traits"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]

[lints]
workspace = true
